filer gemmes korrekt i docker image